# mitotic_chromosome_models_v2

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: hoomd_bottlebrush_universal_winding_invariant.py  hoomd_bottlebrush_universal_winding_invariant_sidepin.py  shared_hoomd_poly.py
